Fixed alignment of images

--- a/new/css/style.css
+++ b/new/css/style.css
@@ -50,3 +50,7 @@ img {
 .startup-row {
     padding: 5px 10px;
 }
+
+.logo {
+    height: 75px;
+}
